<resources>
    <string name="app_name">Lista de Compras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titulo">Cadastro</string>
    <string name="cadastro">Se ainda não tem Login clique aqui.</string>
    <string name="nome">Nome</string>
    <string name="prosseguir">Finalizar cadastro e prosseguir</string>
    <string name="telefone">Telefone</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="textinho">Preencher os campos a baixo para o cadastro.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tela_inicial">TelaInicial</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="inserir">Inserir</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="adicionar_produto">Adicionar produto</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="adicionar">Adicionar</string>
    <string name="r_0_00">R$ 0.00</string>
    <string name="total_0_00">TOTAL: 0,00</string>
    <string name="adicionar_itens">Adicionar itens</string>
    <string name="qtd">Qtd</string>
    <string name="valor">valor</string>


</resources>