<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.CadastroProdutosFragment" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/adicionar_produto"
        android:textSize="21sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_foto_produto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:src="@android:drawable/ic_menu_gallery" />

    <EditText
        android:id="@+id/txt_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_produto" />

    <EditText
        android:id="@+id/txt_qtd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantidade"
        android:inputType="number" />

    <EditText
        android:id="@+id/txt_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/r_0_00"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_inserir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adicionar" />
</LinearLayout>